tests/typing/bad/testfile-return-4.scala

class C { val x = return 1 }
object Main { def main(args: Array[String]) { } }
